# FileCryptoLab

./: .gitignore  CMakeLists.txt  Cipher.h  FileCryptoLab  GammaCipher.cpp  GammaCipher.h  README.md  input.txt  input2.txt  main.cpp  output.txt
include/: AffineCipher.h  Cipher.h  ConsoleMenu.h  FileManager.h  HillCipher.h  MathUtils.h  XorCipher.h
src/: AffineCipher.cpp  ConsoleMenu.cpp  FileManager.cpp  GammaCipher.cpp  HillCipher.cpp  MathUtils.cpp
tests/: TestRunner.cpp  TestRunner.h  TestUtils.h  test_affine.cpp  test_gamma.cpp  test_hill.cpp  test_xor.cpp
